# AppStoreConnectAPI

./: .gitignore  README.md  pyproject.toml
appstoreconnectapi/: __init__.py  client.py  consts.py  utils.py
appstoreconnectapi/api/: _base.py  app_store_versions.py  apps.py  bundle_ids.py  certificates.py  models.py  pre_release_versions.py  profiles.py
examples/: basic_usage.py  generate_jwt.py  get_latest_version.py  request_profile.py
tests/: conftest.py  test_api.py  test_client.py  test_models.py
