[project]
name = "appstoreconnectapi"
version = "0.1.2"
description = "Wrapper around the App Store Connect API"
authors = [
    { name = "Zensonaton", email = "zensonaton@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
    "PyJWT>=2.8",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["appstoreconnectapi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
